--- a/css/style.css
+++ b/css/style.css
@@ -306,6 +306,7 @@ body{
   color: var(--Very--Dark--Blue);
   padding: 1rem 3rem;
   box-shadow: 0px 0px .3rem var(--Dark--Gray);
+  cursor: pointer;
 }
 .mas_informacion__container-info2{
   margin: 5rem 0;
@@ -395,7 +396,7 @@ input.element-dark{
 }
 
 .error{
-  grid-column: 1/4;
+  grid-column: 1/5;
   text-align: center;
   font-size: 1.5rem;
   border: 1px solid #ff0000;
